tests/baselines/reference/for-of15.errors.txt
for-of15.ts(11,11): error TS2490: The type returned by the 'next()' method of an iterator must have a 'value' property.


==== for-of15.ts (1 errors) ====
    class MyStringIterator {
        next() {
            return "";
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var v: string;
    for (v of new MyStringIterator) { } // Should fail
              ~~~~~~~~~~~~~~~~~~~~
!!! error TS2490: The type returned by the 'next()' method of an iterator must have a 'value' property.